[workspace]
resolver = "2"
members = [

    "examples/socketcan_node",
    "integration_tests",
    "zencan-build",
    "zencan-cli",
    "zencan-client",
    "zencan-common",
    "zencan-eds",
    "zencan-macro",
    "zencan-node",
]

[workspace.dependencies]
# Local
zencan-build = { path = "zencan-build" }
zencan-client = { path = "zencan-client" }
zencan-common = { path = "zencan-common", default-features = false }
zencan-eds = { path = "zencan-eds" }
zencan-macro = { path = "zencan-macro" }
zencan-node = { path = "zencan-node" }

# External
critical-section = { version = "1.2.0", default-features = false }
crossbeam = { version = "0.8.4", default-features = false }
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
log = "0.4.27"
snafu = { version = "0.8.5", default-features = false }
socketcan = { version = "3.5.0", features = ["tokio"], git = "https://github.com/mcbridejc/socketcan-rs" }
