[workspace]
resolver = "2"
members = [
    # "examples/socketcan_node",
    "integration_tests",
    "zencan-build",
    "zencan-cli",
    "zencan-client",
    "zencan-common",
    "zencan-eds",
    "zencan-macro",
    "zencan-node",
    "zencan-util"
]


# Defaults for all crates to share
[workspace.package]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/mcbridejc/zencan"

[workspace.dependencies]
# Local
zencan-build = { path = "zencan-build" }
zencan-client = { path = "zencan-client" }
zencan-common = { path = "zencan-common", default-features = false }
zencan-macro = { path = "zencan-macro" }
zencan-node = { path = "zencan-node" }
zencan-util = { path = "zencan-util" }

# External
crc16 = "0.4.0"
critical-section = { version = "1.2.0", default-features = false }
crossbeam = { version = "0.8.4", default-features = false }
defmt = "1.0.1"
defmt-or-log = { version = "0.2.1", default-features = false }
embedded-io = { version = "0.6.1" }
futures = { version = "0.3.31", default-features = false, features = [
    "async-await", "alloc"
] }
heapless = "0.8.0"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
snafu = { version = "0.8.5", default-features = false }

toml = "0.8.20"
