[package]
name = "canopen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { version = "0.8", default-features=false }
defmt-or-log = "0.2.0"
futures = "*"

[features]
default = ["log"]
log = ["defmt-or-log/log"]
defmt = ["defmt-or-log/defmt"]
