[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local
zencan-common.workspace = true
zencan-node.workspace = true
zencan-client.workspace = true

# External
critical-section = { version = "1.2.0", features = ["std"] }
crossbeam.workspace = true
futures.workspace = true
tokio = { version = "1.44.2", features = ["rt", "macros", "time", "sync"] }

[dev-dependencies]
serial_test = "3.2.0"

[build-dependencies]
zencan-build.workspace = true
