[package]
name = "zencan-build"
version = "0.1.0"
edition = "2021"

[dependencies]
zencan-common = { path = "../zencan-common" }
eds-parser = { path = "../eds-parser" }
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
snafu = "0.8"
syn = "2.0"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
