[package]
name = "zencan-build"
version = "0.1.0"
edition = "2021"

[dependencies]
zencan-common = { path = "../zencan-common" }
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
snafu = "0.8"
syn = "2.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
regex = "1.11.1"


[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
