[package]
name = "zencan-build"
version = "0.1.0"
authors = ["Jeff McBride <jeff@jeffmcbride.net>"]
description = "Library for generating code for zencan-node crate"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# local
zencan-common = { workspace = true, features = ["log", "std"] }

# external
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
snafu = "0.8"
syn = "2.0"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }

# docs.rs-specific configuration
[package.metadata.docs.rs]
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]