[package]
name = "zencan-cli"
version = "0.1.0"
edition = "2021"
authors = ["Jeff McBride <jeff@jeffmcbride.net>"]
license = "MPL-2.0"

[[bin]]
name = "zencandump"
path = "src/zencandump.rs"

[dependencies]
zencan-client.workspace = true
clap = { version = "4.5.37", features = ["derive"] }
tokio = { version = "1.45.0", features = ["net", "macros", "rt-multi-thread"] }
chrono = "0.4.41"
