[package]
name = "zencan-cli"
version = "0.1.0"
edition = "2021"
authors = ["Jeff McBride <jeff@jeffmcbride.net>"]
license = "MPL-2.0"

[[bin]]
name = "zencandump"
path = "src/bin/zencandump.rs"

[[bin]]
name = "zencan-cli"
path = "src/bin/zencan-cli.rs"

[dependencies]
# Local
zencan-client.workspace = true

# External
clap = { version = "4.5.37", features = ["derive"] }
clap_complete = { version = "4.5.52", features = ["unstable-dynamic"] }
chrono = "0.4.41"
crossterm = "0.28"
env_logger = "0.11.8"
tokio = { version = "1.45.0", features = ["net", "macros", "rt-multi-thread"] }
ratatui = "0.29.0"
color-eyre = "0.6.4"
reedline = "0.40.0"
shlex = "1.3.0"
