[package]
name = "zencan-cli"
version = "0.1.0"
authors = ["Jeff McBride <jeff@jeffmcbride.net>"]
description = "Command line interface for interacting with CANOpen devices"

edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "zencandump"
path = "src/bin/zencandump.rs"

[[bin]]
name = "zencan-cli"
path = "src/bin/zencan-cli.rs"

[dependencies]
# Local
zencan-client.workspace = true

# External
clap = { version = "4.5.37", features = ["derive"] }
clap_complete = { version = "4.5.52", features = ["unstable-dynamic"] }
chrono = "0.4.41"
env_logger = "0.11.8"
tokio = { version = "1.45.0", features = ["net", "macros", "rt-multi-thread"] }
reedline = "0.40.0"
shlex = "1.3.0"
clap-num = "1.2.0"
