[package]
name = "zencan-client"
version = "0.1.0"
authors = ["Jeff McBride <jeff@jeffmcbride.net>"]
description = "Library for communicating with CANOpen devices on a CAN bus"
keywords = ["embedded", "CAN", "CANOpen"]

edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal
zencan-common = { workspace = true, features = ["socketcan"] }

# External
futures.workspace = true
log.workspace = true
miette = { version="7.2.0", features=["fancy"] }
snafu.workspace = true
socketcan.workspace = true
tokio = { version = "1.45.0", features = ["net", "time", "sync", "rt-multi-thread"] }
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }

# docs.rs-specific configuration
[package.metadata.docs.rs]
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]