[package]
name = "zencan-client"
version = "0.1.0"
authors = ["Jeff McBride <jeff@jeffmcbride.net>"]
description = "Library for communicating with CANOpen devices on a CAN bus"
keywords = ["embedded", "CAN", "CANOpen"]

edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# External
crc16.workspace = true
futures.workspace = true
log.workspace = true
snafu = {workspace = true, features = ["std"]}

tokio = { version = "1.45.0", features = [
    "net",
    "time",
    "sync",
    "rt-multi-thread",
    "macros",
] }
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }

zencan-common = { workspace = true, features = ["log"] }

# docs.rs-specific configuration
[package.metadata.docs.rs]
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
