[package]
name = "zencan-common"
version = "0.1.0"
authors = ["Jeff McBride <jeff@jeffmcbride.net>"]
description = "Shared code for zencan-node and zencan-client"

edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section.workspace = true
defmt = { workspace = true, optional = true }
defmt-or-log = { workspace = true, default-features = false, features = ["at_least_one"] }
int-enum = "1.2.0"
regex = { version = "1.11.1", optional = true }
serde = { workspace = true, optional = true }
snafu.workspace = true
socketcan = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[dev-dependencies]
assertables = "9.8.0"

[features]
default = ["socketcan", "std", "log"]
std = ["critical-section/std", "snafu/std", "dep:toml", "dep:regex", "dep:serde"]
socketcan = ["dep:socketcan", "std"]
defmt = ["defmt-or-log/defmt", "dep:defmt"]
log = ["defmt-or-log/log"]

# docs.rs-specific configuration
[package.metadata.docs.rs]
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
