[package]
name = "zencan-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
zencan-build = { path = "../zencan-build" }
eds-parser = { path = "../eds-parser" }
syn = "*"
proc-macro2 = "1.0.95"
quote = "1.0.40"
darling = "0.20.11"

[dev-dependencies]
critical-section.workspace = true
zencan-node.workspace = true
