[package]
name = "zencan-macro"
version = "0.1.0"
authors = ["Jeff McBride <jeff@jeffmcbride.net>"]
description = "Macro crate for zencan"

edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
zencan-build = { path = "../zencan-build" }
syn = "*"
proc-macro2 = "1.0.95"
quote = "1.0.40"
darling = "0.20.11"

[dev-dependencies]
critical-section.workspace = true
heapless.workspace = true
zencan-node.workspace = true
