[package]
name = "zencan-node"
version = "0.0.0"
authors = ["Jeff McBride <jeff@jeffmcbride.net>"]
rust-version = "1.81"
description = "Library for implementing an OPENCan node, primarily on an MCU"
keywords = ["no_std", "embedded", "CAN", "CANOpen"]
categories = ["embedded", "no-std", "no-std::no-alloc"]

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Local
zencan-common.workspace = true
zencan-macro.workspace = true

# External
critical-section.workspace = true
defmt-or-log = { version = "0.2.0", default-features = false }
embedded-io.workspace = true
futures.workspace = true
heapless.workspace = true
log = { version = "0.4" }

[features]
default = ["log", "std"]
std = ["critical-section/std", "zencan-common/std"]
log = ["defmt-or-log/log"]
defmt = ["defmt-or-log/defmt"]
socketcan = ["zencan-common/socketcan", "std"]

# docs.rs-specific configuration
[package.metadata.docs.rs]
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]