[package]
name = "zencan-node"
version = "0.0.0"
authors = ["Jeff McBride <jeff@jeffmcbride.net>"]
rust-version = "1.81"
description = "Library for implementing an OPENCan node, primarily on an MCU"
keywords = ["no_std", "embedded", "CAN", "CANOpen"]
categories = ["embedded", "no-std", "no-std::no-alloc"]

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Local
zencan-common = { workspace = true, default-features = false }
zencan-macro.workspace = true

# External
crc16.workspace = true
critical-section.workspace = true
defmt = {workspace = true, optional = true}
defmt-or-log.workspace = true
embedded-io.workspace = true
futures.workspace = true
heapless.workspace = true
log = { version = "0.4", optional = true}


[dev-dependencies]
cargo-husky = {version = "1", features = ["run-for-all", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]}

[features]
default = ["log", "pdo"]
std = ["critical-section/std", "zencan-common/std"]
log = ["defmt-or-log/log", "zencan-common/log", "dep:log"]
defmt = ["defmt-or-log/defmt", "zencan-common/defmt", "dep:defmt"]
socketcan = ["zencan-common/socketcan", "std"]
pdo = []

# docs.rs-specific configuration
[package.metadata.docs.rs]
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
