[package]
name = "zencan-util"
version = "0.1.0"
authors = ["Jeff McBride <jeff@jeffmcbride.net>", "Andrew O'Mahony <andrew.omahony@saronic.com>"]
description = "Zencan utility methods"

edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zencan-common = { workspace = true, features = ["log"] }
snafu.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
socketcan_dev = { package = "socketcan-with-osx", git = "https://github.com/saronic-technologies/socketcan-rs", branch = "aomahony/compile-on-OSX" }

[target.'cfg(target_os = "linux")'.dependencies]
socketcan_rs = { package = "socketcan", version = "3.3.0" }

[dev-dependencies]
assertables = "9.8.0"

[features]
default = ["socketcan"]
socketcan = []

# docs.rs-specific configuration
[package.metadata.docs.rs]
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
