[package]
name = "socketcan_node"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local
zencan-node = { workspace = true, features = ["log", "socketcan"] }

# External
clap = { version = "4.5.37", features = ["derive"] }
critical-section = { workspace = true, features = ["std"] }
env_logger = "0.11.8"
log.workspace = true
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "time", "sync"] }

[build-dependencies]
zencan-build.workspace = true

